--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,23 @@ footer {
 #allEntries {
     display: grid;
 }
+
+img {
+    height: 50%;
+    width: 50%;
+}
+figure > img, figcaption {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.introduction {
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.gameImg {
+    display: block;
+}
