--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ figure > img, figcaption {
     display: block;
     margin: 0 auto;
     text-align: center;
+    margin-top: 2%;
     margin-bottom: 2%;
 }
 
